k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nisit-deeden-sveltekit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nisit-deeden-sveltekit
  template:
    metadata:
      labels:
        app: nisit-deeden-sveltekit
    spec:
      containers:
        - name: app
          image: ${DOCKER_USERNAME}/nisit-deeden-sveltekit:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
