k8s/production-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nisit-deeden-frontend
spec:
  type: ClusterIP
  selector:
    app: nisit-deeden-sveltekit
  ports:
    - port: 80
      targetPort: 3000
