k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nisit-deeden-frontend
spec:
  type: LoadBalancer
  selector:
    app: nisit-deeden-sveltekit
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30090
