k8s/uat-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nisit-deeden-frontend-uat
spec:
  type: ClusterIP
  selector:
    app: nisit-deeden-sveltekit-uat
  ports:
    - port: 80
      targetPort: 3000
